--- a/Navbar/Navbar.css
+++ b/Navbar/Navbar.css
@@ -17,7 +17,7 @@ nav {
   width: 100%;
 }
 
-.enlace {
+.Inicio {
   position: absolute;
   padding: 10px 20px;
 }
@@ -45,7 +45,7 @@ nav ul li a {
   text-transform: uppercase;
 }
 
-li a.active,
+li a.Inicio-Active,
 li a:hover {
   background: #ffffff;
   transition: 0.5s;
@@ -66,7 +66,7 @@ li a:hover {
 }
 
 @media (max-width: 952px) {
-  .enlace {
+  .Inicio {
     padding-left: 20px;
   }
   nav ul li a {
@@ -97,11 +97,19 @@ li a:hover {
     font-size: 20px;
   }
   li a:hover,
-  li a.active {
+  li a.Inicio-Active {
     background: none;
     color: rgb(247, 247, 247);
   }
   #check:checked ~ ul {
     left: 0;
   }
+}
+
+.ifFooter {
+  width: 100% !important;
+  height: 160px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
